2017-08-26  Daniel Hawkins
    * types/spellbook/spellbook.c: Identify spellbooks of spells you already know
      when applying them. Also make the message name the spell.

2017-08-23  Daniel Hawkins
    * server/attack.c: Add message and set a new flag for indicating a player is paralyzed.
    * server/player.c: Add message for end of paralysis and disallow blindly eating
      while paralyzed.
    * server/monster.c: Make sure monsters unset paralyze flag when they can move again.
    * include/define.h: Creation of FLAG_PARALYZED flag.
    * common/loader.l: Allow for the paralyzed flag to exist in objects saved to file.

2017-08-15  Daniel Hawkins
    * server/skills.c: Disallow jumping while in a transport.

2017-08-13  Daniel Hawkins
    * server/c_wiz.c: Update error message for set_god.

2017-08-09  Daniel Hawkins
    * common/living.c: Fix incomplete totaling of equipped item power
      in fix_object(). Should fix bug #648.

2017-08-05  Daniel Hawkins
    * server/time.c: Make firewalls choose their direction to cast based on direction,
      not sp. Fixes bug #834.
    * common/button.c: Fix rotation of firewalls to also use direction.
      Fix the animation problem that caused a segfault, too. Solves bug #835.

2017-07-29	Rick Tanner
	* lib/help/statistics.en: Update statistics help file with information on
	  damage per second, and time played.

2017-07-27	Daniel Hawkins
	* server/c_misc.c: Add damage per second calculation to "statistics"
	  command.

2017-07-24	Kevin Zheng
	* server/attack.c: Play attack sounds on the map
	* server/commands.c: Allow players to forget spells

2017-06-17	Daniel Hawkins
	* server/attack.c: Update display for pk to only show when player kills a
	  player other than self.

2017-05-31	Rick Tanner
	* lib/help/nextkey.en: New help file for nextkey command
	* lib/help/prevkey.en: New help file for prevkey command

2017-05-20	Kevin Zheng
	* socket/sounds.c: Play region music if a map doesn't have music
